# RAP-Track

./: README.md  disa_original.txt  disa_original_instru.txt
IOTKit_CM33_S_NS/: .clang-format  Dbg_IOTKit_CM33.ini  IOTKit_CM33_FP_config.txt  IOTKit_CM33_s_ns.cbuild-idx.yml  IOTKit_CM33_s_ns.cbuild-pack.yml  IOTKit_CM33_s_ns.cbuild-set.yml  IOTKit_CM33_s_ns.csolution.yml  IOTKit_CM33_s_ns.uvmpw  IOTKit_CM33_s_ns.uvmpw.uvgui  IOTKit_CM33_s_ns.uvmpw.uvgui.aj4775  IOTKit_CM33_s_ns.uvmpw.uvgui.nneto  README.md  application.c  compile_application.sh  disa.tx  disa.txt  disa_original.txt  disa_original_S.txt  disa_original_instru.txt  disassamble.sh  move2mps2.ps1  vcpkg-configuration.json
IOTKit_CM33_S_NS/IOTKit_CM33_ns/: .clangd  IOTKit_CM33_ns+FVP.cbuild.yml  IOTKit_CM33_ns+V2MMPS2.cbuild.yml  IOTKit_CM33_ns.cproject.yml  IOTKit_CM33_ns.uvguix.aj4775  IOTKit_CM33_ns.uvguix.nneto  IOTKit_CM33_ns.uvoptx  IOTKit_CM33_ns.uvprojx  application.h  application.s  application.su  main_ns.c  sglib.h
IOTKit_CM33_S_NS/IOTKit_CM33_ns/Listings/: IOTKit_CM33_ns.map
IOTKit_CM33_S_NS/IOTKit_CM33_ns/Objects/: IOTKit_CM33_ns.build_log.htm  IOTKit_CM33_ns.htm  IOTKit_CM33_ns.list  IOTKit_CM33_ns.lnp  IOTKit_CM33_ns_FVP.dep  IOTKit_CM33_ns_V2M-MPS2+.dep  application.d  led_v2m-mps2.d  system_iotkit_cm33.d  instrumented.axf
IOTKit_CM33_S_NS/IOTKit_CM33_ns/RTE/_FVP/: RTE_Components.h
IOTKit_CM33_S_NS/IOTKit_CM33_ns/RTE/_V2M-MPS2_/: RTE_Components.h
IOTKit_CM33_S_NS/IOTKit_CM33_ns/RTE/_V2MMPS2/: RTE_Components.h
IOTKit_CM33_S_NS/IOTKit_CM33_s/: .clangd  IOTKit_CM33_s+FVP.cbuild.yml  IOTKit_CM33_s+V2MMPS2.cbuild.yml  IOTKit_CM33_s.cproject.yml  IOTKit_CM33_s.uvguix.aj4775  IOTKit_CM33_s.uvguix.nneto  IOTKit_CM33_s.uvoptx  IOTKit_CM33_s.uvprojx  Secure_Functions.c  Secure_Functions.h  Secure_Functions_CFA.c  Secure_Functions_CFA.h  V2M-MPS2+.BAT  alcata_definitions.h  cfa.c  cfa.h  hash.c  hash.h  kremlib.h  kremlib_base.h  main_s.c  mtb.c  mtb.h  stdout_USART.c  stdout_USART.h
IOTKit_CM33_S_NS/IOTKit_CM33_s/Listings/: IOTKit_CM33_s.map  cfa._ll  cfa.lst  glcd_fonts._ll  glcd_fonts.lst  glcd_v2m-mps2._ll  glcd_v2m-mps2.lst  led_v2m-mps2._ll  led_v2m-mps2.lst  main_s._ll  main_s.lst  mtb._ll  mtb.lst  retarget_io._ll  retarget_io.lst  secure_functions._ll  secure_functions.lst  startup_iotkit_cm33._ll  startup_iotkit_cm33.lst  stdout_usart._ll  stdout_usart.lst  system_iotkit_cm33._ll  system_iotkit_cm33.lst  usart_v2m-mps2._ll  usart_v2m-mps2.lst
IOTKit_CM33_S_NS/IOTKit_CM33_s/Objects/: IOTKit_CM33_s.axf  IOTKit_CM33_s.build_log.htm  IOTKit_CM33_s.htm  IOTKit_CM33_s.list  IOTKit_CM33_s.lnp  IOTKit_CM33_s_FVP.dep  IOTKit_CM33_s_V2M-MPS2+.dep  cfa.__i  cfa.d  glcd_fonts.__i  glcd_fonts.d  glcd_v2m-mps2.__i  glcd_v2m-mps2.d  led_v2m-mps2.__i  main_s.__i  main_s.d  mtb.__i  mtb.d  retarget_io.__i  retarget_io.d  secure_functions.__i  secure_functions.d  startup_iotkit_cm33.__i  startup_iotkit_cm33.d  stdout_usart.__i  stdout_usart.d  system_iotkit_cm33.__i  system_iotkit_cm33.d  usart_v2m-mps2.__i  usart_v2m-mps2.d
IOTKit_CM33_S_NS/IOTKit_CM33_s/RTE/_FVP/: RTE_Components.h
IOTKit_CM33_S_NS/IOTKit_CM33_s/RTE/_V2M-MPS2_/: RTE_Components.h
IOTKit_CM33_S_NS/IOTKit_CM33_s/RTE/_V2MMPS2/: RTE_Components.h
IOTKit_CM33_S_NS/docs/: Notes.md
IOTKit_CM33_S_NS/scripts/: barplot.py  barplot2.py  find_CFG_paths.py
IOTKit_CM33_S_NS/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
IOTKit_CM33_S_NS/tmp/1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
IOTKit_CM33_S_NS/tmp/2/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
IOTKit_CM33_S_NS/tmp/IOTKit_CM33_ns+V2MMPS2/: CMakeLists.txt  components.cmake  groups.cmake
IOTKit_CM33_S_NS/tmp/IOTKit_CM33_ns+V2MMPS2/src/IOTKit_CM33_ns+V2MMPS2-stamp/: IOTKit_CM33_ns+V2MMPS2-configure-.cmake  IOTKit_CM33_ns+V2MMPS2-source_dirinfo.txt
IOTKit_CM33_S_NS/tmp/IOTKit_CM33_ns+V2MMPS2/tmp/: IOTKit_CM33_ns+V2MMPS2-mkdirs.cmake
IOTKit_CM33_S_NS/tmp/IOTKit_CM33_s+V2MMPS2/: CMakeLists.txt  components.cmake  groups.cmake  toolchain.cmake
IOTKit_CM33_S_NS/tmp/IOTKit_CM33_s+V2MMPS2/src/IOTKit_CM33_s+V2MMPS2-stamp/: IOTKit_CM33_s+V2MMPS2-configure-.cmake  IOTKit_CM33_s+V2MMPS2-source_dirinfo.txt
IOTKit_CM33_S_NS/tmp/IOTKit_CM33_s+V2MMPS2/tmp/: IOTKit_CM33_s+V2MMPS2-cfgcmd.txt  IOTKit_CM33_s+V2MMPS2-mkdirs.cmake
verifier/: .words.tmp  .words.tmp2  .words.tmp2  architectures.py  debug.txt  exploit_locator.py  generate_cfg.py  hash_based_cfa_algorithms.py  hash_evidence.cflog  hybrid_cfa_algorithms.py  hybrid_evidence.cflog  instrument.py  instrument_traces.py  instrumented.axf  instrumented.lst  modified.elf  modified.list  old.py  original.elf  original.list  parse_asm.py  patch_ARM.py  patch_MSP430.py  patch_generator.py  patch_validator.py  preprocess_traces.sh  run.ps1  run.sh  sabre.py  sg.lst  structures.py  test.asm  test.py  timing.sh  timingdata_arm_lcdnum  timingdata_msp430_lcdnum  translated.cflog  utils.py  verify.py
verifier/MSProbe/: README.md  assemble.py  msprobe.py
verifier/logs/: keep-structure.txt
verifier/objs/: .words  .words
verifier/timing/: arm_means.csv  move_files.sh  msp430_means.csv  patchSize.py  runtime.py
verifier/timing/0_525/arm/: compress.csv  cover.csv  crc_32.csv  fibcall.csv  jfdctint.csv  lcdnum.csv  libbs.csv
verifier/timing/0_525/msp430/: compress.csv  cover.csv  crc_32.csv  fibcall.csv  jfdctint.csv  lcdnum.csv  libbs.csv
verifier/timing/1_533/arm/: compress.csv  cover.csv  jfdctint.csv  lcdnum.csv  libbs.csv
verifier/timing/1_533/msp430/: fibcall.csv  libbs.csv
verifier/timing/arm/: crc_32.csv  fibcall.csv
verifier/timing/combined/arm/: compress.csv  cover.csv  crc_32.csv  fibcall.csv  jfdctint.csv  lcdnum.csv  libbs.csv
verifier/timing/combined/msp430/: compress.csv  cover.csv  crc_32.csv  fibcall.csv  jfdctint.csv  lcdnum.csv  libbs.csv
verifier/timing/msp430/: compress.csv  cover.csv  crc_32.csv  jfdctint.csv  lcdnum.csv
(+19 files in other folders)
